--- a/assignment4.html
+++ b/assignment4.html
@@ -14,9 +14,12 @@
         <form class="flexsearch-form" id="mainForm">
           <div class="flexsearch-input-wrapper">
             <input class="flexsearch-input" type="search" placeholder="search">
+            <div class="panel"></div>
+            <!-- <div class="panel">panel</div> -->
           </div>
           <input class="flexsearch-submit" type="submit" value="&#10140;"/>
         </form>
+
       </div>
     </div>
 
